# TinyED

./: CMakeLists.txt  README.md  functions.cpp  functions.h  guide.hpp  main.cpp  spring_model.cpp  stvk.cpp  visualize.py
examples/: CMakeLists.txt  examples_util.h  main.cpp
include/: common.h  helpers.h  materials.h  util.h
includes/: CMakeLists.txt  common.h  energy.h  spring.h  util.h
src/: CMakeLists.txt  spring.cpp  util.cpp
